= HEAD

* Add error_email plugin, for easily emailing an error notification for an exception (jeremyevans)

= 1.0.0 (2014-08-19)

* Don't have :extension hash matcher force a terminal match (jeremyevans)

* Add :content option to view method in render plugin to use given content instead of rendering a template (jeremyevans)

* Add :escape option to render plugin for using erb templates where <%= %> escapes and <%== %> does not (jeremyevans)

* Make multi_route plugin route("route_name") method a request method instead of an instance method (jeremyevans)

* Add r.multi_route method to multi_route plugin, for dispatching to named route based on first segment in path (jeremyevans)

* Allow non-GET requests to use r.redirect with no argument, redirecting to current path (jeremyevans)

* Add head plugin, for handling HEAD requests like GET requests with an empty body (jeremyevans)

* Optimize consuming patterns by using a positive lookahead assertion (jeremyevans)

* Add not_allowed plugin, for automatically returning 405 Method Not Allowed responses (jeremyevans)

* Optimize match blocks with no arguments (jeremyevans)

* Add content_for plugin, for storing content in one template and retrieving it in another (jeremyevans)

* Add render_each plugin, for rendering a template for each value in an enumerable (jeremyevans)

* Add backtracking_array plugin, allowing array matchers to backtrack if later matchers do not match (jeremyevans)

* Add :all hash matcher, allowing array matchers to include conditions where you want to match multiple conditions (jeremyevans)

* Add json plugin, allowing match blocks to return arrays/hashes, returning JSON (jeremyevans)

* Add view_subdirs plugin, for setting a subdirectory for views on a per-request basis (jeremyevans)

* Allow default halt method to take no arguments, and use the current response (jeremyevans)

* Add symbol_views plugin, allowing match blocks to return a template name symbol (jeremyevans)
