@@ -817,6 +817,7 @@ not_found :: Adds a +not_found+ block that is called for all 404 responses
              without bodies.
 pass :: Adds a pass method allowing you to skip the current +r.on+ block as if
         it did not match.
+path :: Adds support for named paths.
 per_thread_caching :: Switches the thread-safe cache from a shared cache to a
                       per-thread cache.
 render :: Adds support for rendering templates via tilt, as described above.
